--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Bharatkumar">
     <title>Bharat Landing page | </title>
     <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="themify-icons.css">
     <!-- Bootstrap + Bharat main styles -->
-    <link rel="stylesheet" href="assets/css/BKP.css">
+    <link rel="stylesheet" href="BKP.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -101,8 +101,7 @@
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Adipisicing</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle"></p>
                         </div>
                     </div>
                 </div>
@@ -113,8 +112,7 @@
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Sapiente</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle".</p>
                         </div>
                     </div>
                 </div>
@@ -125,8 +123,7 @@
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Placeat</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle"></p>
                         </div>
                     </div>
                 </div>
@@ -135,8 +132,7 @@
                         <div class="body">
                             <img src="assets/imgs/analytics.svg" alt="right" class="icon">
                             <h6 class="title">Iusto</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
-                                molestias dolorem iste quod.</p>
+                            <p class="subtitle"></p>
                         </div>
                     </div>
                 </div>
