--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@
     </div> <!-- end of page footer -->
 
     <!-- core  -->
-    <script src="jquery-3.4.1.js"></script>
-    <script src="bootstrap.bundle.js"></script>
+    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/jquery-3.4.1.js"></script>
+    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="bootstrap.affix.js"></script>
+    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/bootstrap.affix.js"></script>
 
     <!-- Bharat js -->
-    <script src="BKP.js"></script>
+    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/BKP.js"></script>
 
 </body>
 
