--- a/index.html
+++ b/index.html
@@ -416,16 +416,14 @@
         </footer>
     </div> <!-- end of page footer -->
 
-    <!-- core  -->
-    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/jquery-3.4.1.js"></script>
-    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/bootstrap.bundle.js"></script>
+     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/bootstrap.affix.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Bharat js -->
-    <script src="bharatkumar00797/bharatkumar00797.github.io/edit/main/BKP.js"></script>
-
+    <script src="assets/js/BKP.js"></script>
 </body>
 
 </html>
