--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- font icons -->
     <link rel="stylesheet" href="themify-icons.css">
     <!-- Bootstrap + Bharat main styles -->
-    <link rel="stylesheet" href="js/BKP.css">
+    <link rel="stylesheet" href="../js/BKP.css">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -416,14 +416,14 @@
         </footer>
     </div> <!-- end of page footer -->
 
-     <script src="vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="vendors/bootstrap/bootstrap.bundle.js"></script>
+     <script src="../vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="../vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="../vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Bharat js -->
-    <script src="js/BKP.js"></script>
+    <script src="../js/BKP.js"></script>
 </body>
 
 </html>
