--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- font icons -->
     <link rel="stylesheet" href="themify-icons.css">
     <!-- Bootstrap + Bharat main styles -->
-    <link rel="stylesheet" href="../js/BKP.css">
+    <link rel="stylesheet" href="../bharatkumar00797.github.io/js/BKP.js">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -71,7 +71,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="imgs/man.png" class="about-img"
+                    <img src="../bharatkumar00797.github.io/imgs/man.png" class="about-img"
                         alt="right">
                 </div>
                 <div class="about-caption">
@@ -97,7 +97,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="imgs/pencil-case.svg"
+                            <img src="../bharatkumar00797.github.io/imgs/pencil-case.svg"
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Adipisicing</h6>
@@ -108,7 +108,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="imgs/responsive.svg"
+                            <img src="../bharatkumar00797.github.io/imgs/responsive.svg"
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Sapiente</h6>
@@ -119,7 +119,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="imgs/toolbox.svg"
+                            <img src="../bharatkumar00797.github.io/imgs/toolbox.svg"
                                 alt="right"
                                 class="icon">
                             <h6 class="title">Placeat</h6>
@@ -130,7 +130,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="imgs/analytics.svg" alt="right" class="icon">
+                            <img src="../bharatkumar00797.github.io/imgs/analytics.svg" alt="right" class="icon">
                             <h6 class="title">Iusto</h6>
                             <p class="subtitle"></p>
                         </div>
@@ -149,7 +149,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img src="imgs/folio-1.jpg" class="portfolio-card-img"
+                        <img src="../bharatkumar00797.github.io/imgs/folio-1.jpg" class="portfolio-card-img"
                             alt="right">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="imgs/folio-2.jpg" class="img-responsive rounded"
+                        <img class="portfolio-card-img" src="../bharatkumar00797.github.io/imgs/folio-2.jpg" class="img-responsive rounded"
                             alt="right">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="imgs/folio-3.jpg" class="img-responsive rounded"
+                        <img class="portfolio-card-img" src="../bharatkumar00797.github.io/imgs/folio-3.jpg" class="img-responsive rounded"
                             alt="right">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
@@ -196,7 +196,7 @@
             <div class="pricing-wrapper">
                 <div class="pricing-card">
                     <div class="pricing-card-header">
-                        <img class="pricing-card-icon" src="imgs/scooter.svg"
+                        <img class="pricing-card-icon" src="../bharatkumar00797.github.io/imgs/scooter.svg"
                             alt="right">
                     </div>
                     <div class="pricing-card-body">
@@ -218,7 +218,7 @@
                 </div>
                 <div class="pricing-card">
                     <div class="pricing-card-header">
-                        <img class="pricing-card-icon" src="imgs/shipped.svg"
+                        <img class="pricing-card-icon" src="../bharatkumar00797.github.io/imgs/shipped.svg"
                             alt="right">
                     </div>
                     <div class="pricing-card-body">
@@ -240,7 +240,7 @@
                 </div>
                 <div class="pricing-card">
                     <div class="pricing-card-header">
-                        <img class="pricing-card-icon" src="imgs/startup.svg"
+                        <img class="pricing-card-icon" src="../bharatkumar00797.github.io/imgs/startup.svg"
                             alt="right">
                     </div>
                     <div class="pricing-card-body">
@@ -293,7 +293,7 @@
                 <div class="col-md-6">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
-                            <img src="imgs/avatar2.jpg" class="testimonial-card-img"
+                            <img src="../bharatkumar00797.github.io/imgs/avatar2.jpg" class="testimonial-card-img"
                                 alt="right">
                         </div>
                         <div class="testimonial-card-body">
@@ -305,7 +305,7 @@
                 <div class="col-md-6">
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
-                            <img src="imgs/avatar3.jpg" class="testimonial-card-img"
+                            <img src="../bharatkumar00797.github.io/imgs/avatar3.jpg" class="testimonial-card-img"
                                 alt="right">
                         </div>
                         <div class="testimonial-card-body">
@@ -327,7 +327,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="imgs/img-1.jpg" class="blog-card-img"
+                    <img src="../bharatkumar00797.github.io/imgs/img-1.jpg" class="blog-card-img"
                         alt="right">
                 </div>
                 <div class="blog-card-body">
@@ -350,7 +350,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="imgs/img-2.jpg" class="blog-card-img"
+                    <img src="../bharatkumar00797.github.io/imgs/img-2.jpg" class="blog-card-img"
                         alt="right">
                 </div>
                 <div class="blog-card-body">
@@ -416,14 +416,14 @@
         </footer>
     </div> <!-- end of page footer -->
 
-     <script src="../vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="../vendors/bootstrap/bootstrap.bundle.js"></script>
+     <script src="../bharatkumar00797.github.io/jquery/jquery-3.4.1.js"></script>
+    <script src="../bharatkumar00797.github.io/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="../vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="../bharatkumar00797.github.io/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Bharat js -->
-    <script src="../js/BKP.js"></script>
+    <script src="../bharatkumar00797.github.io/js/BKP.js"></script>
 </body>
 
 </html>
