--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Bharatkumar">
     <title>Bharat Landing page | </title>
     <!-- font icons -->
-    <link rel="stylesheet" href="../bharatkumar00797.github.io/../themify-icons.css">
+    <link rel="stylesheet" href="../bharatkumar00797.github.io/themify-icons.css">
     <!-- Bootstrap + Bharat main styles -->
     <link rel="stylesheet" href="../bharatkumar00797.github.io/js/BKP.js">
 </head>
