--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@
         </footer>
     </div> <!-- end of page footer -->
 
-     <script src="../bharatkumar00797.github.io/jquery/jquery-3.4.1.js"></script>
-    <script src="../bharatkumar00797.github.io/bootstrap/bootstrap.bundle.js"></script>
+     <script src="../bharatkumar00797.github.io/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="../bharatkumar00797.github.io/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="../bharatkumar00797.github.io/bootstrap/bootstrap.affix.js"></script>
+    <script src="../bharatkumar00797.github.io/vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Bharat js -->
     <script src="../bharatkumar00797.github.io/js/BKP.js"></script>
