--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Bharatkumar">
     <title>Bharat Landing page | </title>
     <!-- font icons -->
-    <link rel="stylesheet" href="../bharatkumar00797.github.io/themify-icons.css">
+    <link rel="stylesheet" href="../bharatkumar00797.github.io/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Bharat main styles -->
     <link rel="stylesheet" href="../bharatkumar00797.github.io/js/BKP.js">
 </head>
@@ -416,7 +416,7 @@
         </footer>
     </div> <!-- end of page footer -->
 
-     <script src="../bharatkumar00797.github.io/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="../bharatkumar00797.github.io/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="../bharatkumar00797.github.io/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
