--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                       <ul>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="www.linkedin.com/in/bharat-chandvani"><span class="ico-circle"><i class="bi bi-linkedin"> </i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/bharat-chandvani"><span class="ico-circle"><i class="bi bi-linkedin"> </i></span></a></li>
                       </ul>
                     </div>
                   </div>
