--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
+         <!-- <li><a class="nav-link scrollto " href="#work">Work</a></li> -->
           <li><a class="nav-link scrollto " href="#blog">Git Projects</a></li>
         <!--  <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -77,7 +77,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Bharatkumar Here</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Designer, Developer, Freelancer, Photographer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Project Coordination,Web Development, Freelancing, Data Analysis"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -119,10 +119,10 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PHP</span> <span class="pull-right">50%</span>
+                   <!-- <span>PHP</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
+                    </div> -->
                     <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -132,7 +132,7 @@
                 <div class="col-md-6">
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
-                      <h5 class="title-left">
+                      <h5 class="title-left" >
                         About me
                       </h5>
                     </div>
