--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
               <!--
               All the links in the footer should remain intact.
              -->
-              Designed by <a href="https://bootstrapmade.com/">Made in Bootstrap</a>
+              Designed by <a href="">Made by BK</a>
             </div>
           </div>
         </div>
