--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title"></h2>
+                <h2 class="s-title"> Interactive Design Innovator: Front-End Focus</h2>
                 <p class="s-description text-center">
                   
                 </p>
@@ -241,7 +241,7 @@
                 <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design Virtuoso</h2>
+                <h2 class="s-title">Responsive Design</h2>
                 <p class="s-description text-center">
                 
                 </p>
@@ -644,7 +644,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="bharatkumar00797.github.io/contact.php" method="post" role="form" class="php-email-form">
+                      <form action="https://github.com/bharatkumar00797/bharatkumar00797.github.io/blob/main/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
