--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="" height="300" width="300">
+                        <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="" height="300" width="300"/>
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -111,18 +111,18 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>HTML/HTML5</span> <span class="pull-right">90%</span>
+                    <span>HTML5/CSS3</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>CSS3/SCSS3</span> <span class="pull-right">75%</span>
+                    <span>PYTHON</span> <span class="pull-right">75%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                   <!-- <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>.NET, C#</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div> -->
+                    </div> 
                     <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -644,7 +644,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="https://github.com/bharatkumar00797/bharatkumar00797.github.io/blob/main/contact.php" method="post" role="form" class="php-email-form">
+                      <form action="main/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
