--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                       <p class="lead">
 
                       </p>
-                      <ul class="list-ico">
+                      <ul class="list-ico" id="navbar" class="navbar">
                         <li><span class="bi bi-geo-alt"></span> Southampton Drive </li>
                         <li><span class="bi bi-phone"></span> (647-549-6019)</li>
                         <li><span class="bi bi-envelope"></span> ChandvaniBharat@Gmail.com</li>
