--- a/index.html
+++ b/index.html
@@ -677,6 +677,12 @@
                           </div>
                         </div>
                       </form>
+                        <!-- Include React dependencies -->
+                        <script src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
+                        <script src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
+                        <script src="https://cdn.jsdelivr.net/npm/@formspree/react@2.0.1/umd/formspree-react.production.min.js"></script>
+                        <!-- Include your React component script -->
+                        <script src="contactForm.js"></script>
                     </div>
                   </div>
                   <div class="col-md-6">
