--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.moin.css" rel="stylesheet">
   <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -607,7 +607,7 @@
                     <h6 class="category">Python Projects</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">Advance Python</a></h3>
+                <h3 class="card-title"><a href="https://github.com/bharatkumar00797/Python">Advance Python</a></h3>
                 <p class="card-description">
                 
                 </p>
