--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                         Get in Touch
                       </h5>
                     </div>
-                    <div class="more-info"  id="navbar" class="navbar">
+                    <div class="more-info" >
                       <p class="lead">
 
                       </p>
@@ -700,8 +700,7 @@
                         <li><span class="bi bi-phone"></span> (647-549-6019)</li>
                         <li><span class="bi bi-envelope"></span> ChandvaniBharat@Gmail.com</li>
                       </ul>
-                    </div>
-                   
+                    </div>   
                   </div>
                 </div>
               </div>
@@ -743,12 +742,12 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="vendor/purecounter/purecounter_vanilla.js"></script>b
+  <script src="vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/glightbox/js/glightbox.min.js"></script>
   <script src="vendor/swiper/swiper-bundle.min.js"></script>
   <script src="vendor/typed.js/typed.umd.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
+  <script src="vendor/php-email-form/contactForm.js"></script>
 
   <!-- Template Main JS File  -->
   <script src="js/main.js"></script>
