--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="contactForm.js" method="post" role="form" class="php-email-form">
+                      <form action="forms/contactForm.js" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -747,7 +747,7 @@
   <script src="vendor/glightbox/js/glightbox.min.js"></script>
   <script src="vendor/swiper/swiper-bundle.min.js"></script>
   <script src="vendor/typed.js/typed.umd.js"></script>
-  <script src="vendor/php-email-form/contactForm.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File  -->
   <script src="js/main.js"></script>
