--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contactForm.js" method="post" role="form" class="php-email-form">
+                      <form action="https://formspree.io/f/mzbnekbks" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -677,12 +677,12 @@
                           </div>
                         </div>
                       </form>
-                     <!--  
+                     
                         <script src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/@formspree/react@2.0.1/umd/formspree-react.production.min.js"></script>
-                        <!-- Include your React component script 
-                        <script src="contactForm.js"></script> -->
+                        <!-- Include your React component script -->
+                        <script src="forms/contactForm.js"></script>
                     </div>
                   </div>
                   <div class="col-md-6">
