--- a/index.html
+++ b/index.html
@@ -291,17 +291,17 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-3 col-lg-3">
+       <!--   <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="97%" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Client Satisfaction Ratio</span>
+                <span class="counter-text"></span>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div><!-- End Counter Section -->
@@ -645,7 +645,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="https://formspree.io/f/mzbnekbks" method="post" role="form" class="php-email-form">
+                      <form action="https://www.formspree.io/f/mzbnekbks" method="POST" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -682,7 +682,7 @@
                         <script src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/@formspree/react@2.0.1/umd/formspree-react.production.min.js"></script>
                         <!-- Include your React component script -->
-                        <script src="forms/contactForm.js"></script>
+                        <script src="contactForm.js"></script>
                     </div>
                   </div>
                   <div class="col-md-6">
