--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               </a>
               <div class="work-content">
                 <div class="row">
-                  <div class="col-sm-8"> <!-- "next":"/thanks?language=en","ok":true} -->
+                  <div class="col-sm-8"> 
                     <h2 class="w-title"> Wordpress</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
