--- a/index.html
+++ b/index.html
@@ -673,7 +673,14 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" onclick="myFunction()" class="button button-a button-big button-rouded">Send Message</button>
+                            <script>
+                              function myFunction(){
+                                
+                              window.location.href="";
+                              
+                            }
+                            </script>
                           </div>
                         </div>
                       </form>
