--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             <script>
                               function myFunction(){
                                 
-                              window.location.href="https://github.com/bharatkumar00797.github.io/main/thankyou.html"
+                              window.location.href="https://github.com/bharatkumar00797/bharatkumar00797.github.io/blob/10041e95fda78a69a61c9b8bf1047a18b737a8a1/thankyou.html"
                               
                             }
                             </script>
