--- a/index.html
+++ b/index.html
@@ -510,14 +510,8 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" onclick="myFunction()" class="button button-a button-big button-rouded">Send Message</button>
-                            <script>
-                              function myFunction(){
-                                
-                              window.location.href="https://github.com/bharatkumar00797/bharatkumar00797.github.io/blob/10041e95fda78a69a61c9b8bf1047a18b737a8a1/thankyou.html"
-                              
-                            }
-                            </script>
+                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+
                           </div>
                         </div>
                       </form>
