--- a/index.html
+++ b/index.html
@@ -515,7 +515,8 @@
                           </div>
                         </div>
                       </form>
-                     
+                     <div>
+                        <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
                         <script src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
                         <script src="https://cdn.jsdelivr.net/npm/@formspree/react@2.0.1/umd/formspree-react.production.min.js"></script>
