--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <!-- the pagclip link to style sheet -->
+  <!-- the pagclip link to style sheet 
   <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-
+-->
   <!-- =======================================================
   
   ======================================================== -->
