--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Project Completed</span>
+                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Open Source Projects Completed</span>
               </div>
             </div>
           </div>
@@ -275,8 +275,8 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text"></span>
+                <p data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text"> </span>
               </div>
             </div>
           </div>
@@ -286,7 +286,7 @@
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="550" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="108" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">TOTAL CLIENTS</span>
               </div>
             </div>
@@ -498,8 +498,8 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                      <span class="author">Marta Socrate</span>
+                      <img src="img//testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <span class="author">Bharatkumar Chandvani</span>
                     </div>
                     <div class="content-test">
                       <p class="description lead">
