--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DevFolio</a></h1>
+      <h1 class="logo"><a href="index.html">Bharatkumar</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -42,7 +42,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto " href="#work">Projects</a></li>
           <!--<li><a class="nav-link scrollto " href="#blog"></a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -264,8 +264,8 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Open Source Projects Completed</span>
+                <p data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Age</span>
               </div>
             </div>
           </div>
@@ -275,8 +275,8 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text"> </span>
+                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Open Source Projects Completed</span>
               </div>
             </div>
           </div>
@@ -297,8 +297,8 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Years of Field Experience</span>
+                <p data-purecounter-start="0" data-purecounter-end="1.5" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Professional Field Experience</span>
               </div>
             </div>
           </div>
@@ -720,7 +720,7 @@
               <!--
               All the links in the footer should remain intact.
              -->
-              Designed by <a href="https://bootstrapmade.com/">Made with bootstrap</a>
+            <a href="https://bootstrapmade.com/"> Designed & Made with bootstrap</a>
 
             </div>
             <div class="socials">
