--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="img/testimonial-4.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -203,7 +203,7 @@
                 <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Mobile Application Development</h2>
+                <h2 class="s-title">Query Maestro</h2>
                 <p class="s-description text-center">
                  
                 </p>
@@ -275,8 +275,8 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Open Source Projects Completed</span>
+                <p data-purecounter-start="0" data-purecounter-end="78" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Projects Completed</span>
               </div>
             </div>
           </div>
@@ -286,7 +286,7 @@
                 <span class="ico-circle"><i class="bi bi-people"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="108" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="62" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">TOTAL CLIENTS</span>
               </div>
             </div>
@@ -297,8 +297,8 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="1.5" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Professional Field Experience</span>
+                <p data-purecounter-start="0" data-purecounter-end="2 Years" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Professional Working Experience</span>
               </div>
             </div>
           </div>
@@ -316,7 +316,7 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                
               </p>
               <div class="line-mf"></div>
             </div>
