--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                 <span class="ico-circle"><i class="bi bi-award"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="2 Years" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">Professional Working Experience</span>
+                <p data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="counter purecounter"></p>
+                <span class="counter-text">Professional Working Years</span>
               </div>
             </div>
           </div>
