--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html">Bharatkumar</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- Uncomment below if you prefer to use an image logo. -->
       <!-- <a href="index.html" class="logo"><img src="img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
@@ -199,7 +199,7 @@
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
+                <h2 class="s-title">UX/UI Design</h2>
                 <p class="s-description text-center">
                 
                 </p>
@@ -709,7 +709,7 @@
             <div class="socials">
               <ul>
                <!-- <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>-->
+                <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li> -->
                 <li><a href="https://twitter.com/BharatkChand"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                 <li><a href="https://www.linkedin.com/in/bharat-chandvani"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
               </ul>
