--- a/index.html
+++ b/index.html
@@ -655,9 +655,14 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" onclick="sendmessage()" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
                         </div>
+                        <script>
+                            function sendMessage() {
+                                  alert("Thank you. Your message has been sent.");
+                                    }
+                        </script>
                       </form>
                     </div>
                   </div>
