--- a/index.html
+++ b/index.html
@@ -655,11 +655,12 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" onclick="sendmessage()" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" onclick="sendMessage()" class="button button-a button-big button-rouded">Send Message</button>
                             <script>
-                            function sendMessage() {
-                                  alert("Thank you. Your message has been sent.");
-                                    }
+                             function sendMessage() {
+                                            alert("Thank you. Your message has been sent.");
+                                            location.reload();
+                                  }
                         </script>
                           </div>
                         </div>
