--- a/index.html
+++ b/index.html
@@ -663,8 +663,10 @@
                       </form>
                        <script>
                              function sendMessage() {
-                                            alert("Thank you. Your message has been sent.");
-                                            location.reload();
+                                      event.preventDefault(); // Prevent default form submission
+                                      alert("Thank you. Your message has been sent.");
+                                      location.reload();
+                                            
                                   }
                         </script>
                     </div>
