--- a/index.html
+++ b/index.html
@@ -661,6 +661,13 @@
                         </div>
                          
                       </form>
+                      <script>
+                        function sendMessage(event) {
+                          event.preventDefault(); // Prevent default form submission
+                          alert("Thank you. Your message has been sent.");
+                          location.reload();
+                              }
+                      </script>
                      
                     </div>
                   </div>
