--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
     </div><!-- End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
-   
 
+     <section id="work" class="portfolio-mf sect-pt4 route">
+     </section>
     <!-- ======= Testimonials Section ======= -->
     <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
